apps/ntfy/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  labels:
    app.kubernetes.io/name: ntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ntfy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ntfy
    spec:
      nodeSelector:
        kubernetes.io/hostname: helium
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:latest
          args: ["serve"]
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
            - name: cache
              mountPath: /var/cache/ntfy
          livenessProbe:
            httpGet:
              path: /v1/health
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /v1/health
              port: http
            periodSeconds: 10
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: ntfy-cache
